# ps1engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/model_viewer/: main.cpp
include/: camera.hpp  component.hpp  componentManager.hpp  engine.hpp  mesh.hpp  meshManager.hpp  renderer.hpp  utility.hpp
ps1engine/include/: component.hpp  componentManager.hpp  engine.hpp  meshManager.hpp  transform.hpp  utility.hpp
ps1engine/src/: component.cpp  componentManager.cpp  engine.cpp  mesh.cpp  transform.cpp  trig_tables.cpp  utility.cpp
src/: camera.cpp  component.cpp  componentManager.cpp  engine.cpp  main.cpp  mesh.cpp  meshManager.cpp  renderer.cpp  transform.cpp  utility.cpp
